--- a/GetCombinations/GetCombinations.csproj
+++ b/GetCombinations/GetCombinations.csproj
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>3</WarningLevel>
-    <NoWarn>CS0660,CS0661,IDE0059</NoWarn>
+    <NoWarn>CS0660,CS0661,IDE0059,CS0219</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
