--- a/GetCombinations/GetCombinations.csproj
+++ b/GetCombinations/GetCombinations.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Cards\Board.cs" />
     <Compile Include="Cards\Card.cs" />
     <Compile Include="Cards\Data.cs" />
-    <Compile Include="Cards\Equity.cs" />
+    <Compile Include="Equity.cs" />
     <Compile Include="Cards\Hand.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
